--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -2,51 +2,15 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styl.css">
+	<link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
 
-	<style>
-	h1 {
-		text-align: center;
-	}
 
-	h2 {
-		text-align: center;
-	}
-
-	h3 {
-		text-align: center;
-	}
-
-	body {
-		background: url("bridge.jpg") no-repeat center center fixed;
-		background-size: cover;
-	}
-
-	ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 80%;
-    background-color: #f1f1f1;
-}
-
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 0 8px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color on hover */
-li a:hover {
-    background-color: #555;
-    color: white;
-}
-	</style>
 </head>
 <body>
 	<h1>Steffi Jane </h1>
-	<h2>2016</h2>
-	<h3>Welcome!</h3>
+	
+
+
 
 <ul> 
   <li><a href="personalwebsite.html">Home</a></li>
@@ -54,6 +18,11 @@ li a:hover {
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
+
+<img class="image" src="me.jpg">
+
+<p><b>Take a look inside</b></p>
+
 
 
 </body>
