styl, contact, news, about, website

--- a/news.html
+++ b/news.html
@@ -21,5 +21,19 @@
   <li><a href="about.html">About</a></li>
 </ul>
 
+	<div class="content">
+		<h2>Upcoming Projects!</h2>
+		<h2>The Lingerie Chef</h2>
+
+<div class="lingerie">
+	<img class="project" src="project.jpg">
+	<p class="lingerie-text">
+		Currently working on developing The lingerie Chef. Which is a website which caters and features exotic and avant garde recipes coming soon in 2/2016. Just in time to cook dinner the sexy way.
+	 </p>
+</div>
+
+
+	</div>
+
 </body>
 </html>
