--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -19,10 +19,13 @@
   <li><a href="about.html">About</a></li>
 </ul>
 
-<img class="image" src="me.jpg">
 
-<p><b>Take a look inside</b></p>
 
+
+	<div class="content">
+		<img class="image" src="me.jpg">
+		<p><b>Web Developer: Take a look inside!</b></p>
+	</div>
 
 
 </body>
