--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 		<link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
 
 
-
 	</head>
 	<body>
 
@@ -21,5 +20,20 @@
   <li><a href="about.html">About</a></li>
 </ul>
 
+	<div class="content">
+		<div class="newspaper">
+			Born and raised in the city that never sleeps, I came across the coding world about a year ago. Working as a receptionist at a tech firm, I had developed an interest while watching developers work on the company websites and among other tweaks. Then I discovered the New York Code and Design Academy and decided to enroll in classes. So far I have learned Html and CSS, being able to change fonts and backgrounds and be creative with the websites that I can build. A side from my personal website, I am also developing a side project called " The Lingerie Chef" you can learn more about that in my News tab above. I hope to create more websites in the future using the skills I have aquired in my class.
+
+			Feel free to browse on page :)
+	</div>
+
+
+	</div>
+
+	
+
+
+</body>
+</html>
 </body>
 </html>
