--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,18 @@
   <li><a href="about.html">About</a></li>
 </ul>
 
+	<div class="content">
+		<h5 class="location">Based in New York City </h5>
+		<img class="nyc" src="nyc.jpg">
+
+		<h5 class="email">Can be reached at Balarezos@gmail.com</h5>
+		<img class="comp" src="comp.jpg">
+
+	</div>
+
+
+
+
+
 </body>
 </html>
